# Masters-Language-Analysis

./: README.md  profile.prof  profile.txt  pyproject.toml  result_plots.ipynb
data/: balladyna.txt  kordian.txt  niepewnosc.txt  oda-do-mlodosci.txt  pan_tadeusz.txt
data_analysis/: analysis.py  load.py  main.py  output.py  plots.py  statistics.py
tests/: test_dictionary.txt  test_works.txt  tests.py
