[build-system]
requires = ["setuptools>=61"] #???
build-backend = "setuptools.build_meta"

[project]
name = "master-analysis"
version = "1.0.0"
description = "Master language analysis"
authors = [
    {name = "Małgorzata Marszałek"}
]

requires-python = ">=3.10"

dependencies = [
    "matplotlib",'pandas'
]

[tool.setuptools]
packages = ["data_analysis"]

[project.scripts]
master-analysis = "data_analysis.main:main"